@@ -47,6 +47,14 @@ $A.NumberField = Ext.extend($A.TextField,{
         if(this.allowformat)rv = $A.formatNumber(rv);
         return rv;
     },
+    processMaxLength : function(rv){
+    	var s=rv.split('.');
+    	return $A.NumberField.superclass.processMaxLength.call(this, s[0])+(s[1]?'.'+s[1]:''); 
+    },
+    initMaxLength : function(maxlength){
+    	if(maxlength)
+    	this.el.dom.maxLength=parseInt(maxlength)+(this.allowdecimals?this.decimalprecision+1:0);
+    },
     processValue : function(v){
         return this.parseValue(v);
     },
