@@ -2,6 +2,7 @@ Release ()
 ------------------------------------
 * Grid的Column上增加forExport属性，用于导出功能。
 * 修改radio的图片
+* 修正numbeField的maxLength错误
 
 Release (2011-04-13)
 ------------------------------------
